--- a/index.html
+++ b/index.html
@@ -125,12 +125,16 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>06/2023, I am promoted to Associate Professor with Tenure ((effective August 2023). Many thanks to my students, collaborators, colleagues, and mentors!</li>
+		  	<li>06/2023, We gave a tutorial on <a href="https://vdadg.github.io/index.html" target="_blank">Recent Advances in Visual Domain Adaptation and Generalization</a> at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>
+		  	<li>06/2023, One paper is accepted to <a href="https://icml-compbio.github.io/" target="_blank">The 2023 ICML Workshop on Computational Biology</a>.</li>
+		  	<li>05/2023, One paper is accepted by IEEE Transactions on Cognitive and Developmental Systems (TCDS).</li> 
+		  	<li>04/2023, I am selected to participate in <a href="https://www.darpa.mil/work-with-us/ai-forward" target="_blank">DARPA AI Forward</a>.</li> 
 		  	<li>04/2023, Two papers on graph-based local clustering and time series forecasting are accepted at <a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a>.</li> 
 		  	<li>04/2023, We will organize <a href="https://web.northeastern.edu/smilelab/amfg2023/" target="_blank">The 11th IEEE International Workshop on Analysis and Modeling of Faces and Gestures (AMFG)</a> at ICCV 2023.</li>
 		  	<li>04/2023, I accepted the invitation to serve as Area Chair for <a href="https://nips.cc/Conferences/2023" target="_blank">NeurIPS 2023</a>.</li>
 		  	<li>03/2023, One paper on trustworthy representation learning is accepted to the Blue Sky Idea Track of <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>.</li> 
 		   	<li>02/2023, One paper on video recognition is accepted at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>
-		  	<li>02/2023, We will organize a tutorial Recent Advances in Visual Domain Adaptation and Generalization at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>  
 		  	<li>01/2023, Three papers on fair graph learning, continual federated learning, and few-shot transfer learning are accepted at <a href="https://iclr.cc/Conferences/2023" target="_blank">ICLR 2023</a>.</li> 
 		  	<li>01/2023, One paper is accepted by Bioinformatics; One paper is accepted by JMIR AI.</li>
 		  	<li>12/2022, Seven papers are accepted at <a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE 2023</a>, <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>, Briefings in Bioinformatics, AAAI-23 <a href="https://www.continualcausality.org/" target="_blank">Bridge Program</a>, and <a href="https://icaart.scitevents.org/" target="_blank">ICAART 2023</a>.
