--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,8 @@
            
           <ol class="">
 			<b>2023</b>
-		  	<li>Zhongliang Zhou*, Wayland Yeung*, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <em>Bioinformatics</em>, 2023. (* indicates equal contribution)</li> 
+		  	<li>Zhongliang Zhou*, Wayland Yeung*, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <em>Bioinformatics</em>, 2023. (* indicates equal contribution)</li>
+		  	<li>Lin Zhao, Haixing Dai, Zihao Wu, Zhenxiang Xiao, Lu Zhang, David Weizhong Liu, Xintao Hu, Xi Jiang, <b>Sheng Li</b>, Dajiang Zhu, and Tianming Liu. Coupling visual semantics of artificial neural networks and human brain function via synchronized activations. <em>IEEE Transactions on Cognitive and Developmental Systems (<b>T-CDS</b>)</em>, 2023.</li>
 		  	<li>Shengyu Chen, Nasrin Kalanat, Yiqun Xie, <b>Sheng Li</b>, Jacob Zwart, Jeffrey Sadler, Alison Appling, Samantha Oliver, Jordan Read, and Xiaowei Jia. Physics-Guided Machine Learning from Simulated Data with Different Physical Parameters. <em>Knowledge and Information Systems (<strong>KAIS</strong>)</em>, 2023.</li>
 		  	<li>Juliet N. Sekandi, Weili Shi, Ronghang Zhu, Patrick Evans Kaggwa, Ernest Mwebaze, and <b>Sheng Li</b>. Application of Artificial Intelligence to Monitoring of Medication Adherence for Tuberculosis Treatment in Africa: A Pilot Study. <em>Journal of Medical Internet Research (JMIR) AI</em>, 2023.</li> 
 		  	<li>Dongliang Guo, Zhixuan Chu, and <b>Sheng Li</b>. Fair Attribute Completion on Graph with Missing Attributes. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
@@ -99,6 +100,7 @@
 		  	<li>Zhixuan Chu and <b>Sheng Li</b>. Continual Causal Inference: Challenges and Opportunities. <i>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI) Bridge Program - Continual Causality</i>, 2023.</li>
 		  	<li>Zhanwen Chen, Saed Rezayi, <b>Sheng Li</b>. More Knowledge, Less Bias: Unbiasing Scene Graph Generation with Explicit Ontological Adjustment. <i>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>)</i>, 2023.</li>
 		  	<li>Hemadri Jayalath, Ghadeer Yassin, Lakshmish Ramaswamy, and <b>Sheng Li</b>. Continual Optimization of In-Production Machine Learning Systems through Semantic Analysis of User Feedback. <i>The 15th International Conference on Agents and Artificial Intelligence (<b>ICAART</b>)</i>, 2023.</li>
+		  	<li>Zhongliang Zhou, Wayland Yeung, Saber Soleymani, Nathan Gravel, Mariah Salcedo, <b>Sheng Li</b>, and Natarajan Kannan. Explaining the blackbox - Unraveling Protein Language Model's Learning Mechanisms for Kinase-Specific Phosphorylation Prediction. <em>The ICML Workshop on Computational Biology</em>, 2023.</li>
 		  	<p></p>
 			
 		  	<b>2022</b>
