--- a/group.html
+++ b/group.html
@@ -55,10 +55,8 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="">
-            <li><b>Seyedsaed Rezayidemne</b>, Spring 2019 - </li>
 		<li><b>Ronghang Zhu</b>, Fall 2019 - </li>  
 		<li><b>Zhongliang Zhou</b> (Co-advised with Dr. Natarajan Kannan), Spring 2020 - </li>
-		<li><b>Yu Wang</b> (Statistics, Co-advised with Dr. Pengsheng Ji), Spring 2021 - </li>
 		<li><b>Daiqing Qi</b>, Fall 2021 - </li> 
 		<li><b>Weili Shi</b>, Fall 2021 - </li> 
 		<li><b>Zhanwen Chen</b>, Fall 2021 - </li> 
@@ -106,7 +104,9 @@
           <ul class="">
 			<b>PhD Students</b>
 			<li><b>Zhixuan Chu</b> (Biostatistics, Co-advised with Dr. Stephen Rathbun), Spring 2019 - Spring 2021. First employment: Ant Financial.</li>  
-			<p></p>
+			<li><b>Seyedsaed Rezayidemne</b>, Fall 2018 - Spring 2023.</li>
+		  	<li><b>Yu Wang</b> (Statistics, Co-advised with Dr. Pengsheng Ji), Spring 2021 - Spring 2023. First employment: LinkedIn.</li>
+		  	<p></p>
 			<b>MS Students</b>
 		  	<li><b>Kushajveer Singh</b>, Spring 2021 - Summer 2022</li>
 			<li><b>Mitchell Buff</b>, Fall 2021 - Spring 2022</li>
