--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>08/2023, One paper on the calibration of graph neural networks is accepted at ACM CIKM 2023. </li> 
+		  	<li>07/2023, One paper is accepted by Medical Physics; One paper is accepted by ACS Nano. </li> 
 		  	<li>06/2023, I am promoted to Associate Professor with Tenure (effective 08/2023). Many thanks to my students, collaborators, colleagues, and mentors!</li>
 		  	<li>06/2023, We gave a tutorial on <a href="https://vdadg.github.io/index.html" target="_blank">Recent Advances in Visual Domain Adaptation and Generalization</a> at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>
 		  	<li>06/2023, One paper is accepted to <a href="https://icml-compbio.github.io/" target="_blank">The 2023 ICML Workshop on Computational Biology</a>.</li>
