--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,7 @@
             <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 4 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
 		<p class="">	
         <b>Conference Papers</b>
-        <i>(<b>4 ICLR, 2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 8 CIKM, 8 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 2 CVPR, 1 ICCV, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
+        <i>(<b>4 ICLR, 2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 9 CIKM, 8 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 2 CVPR, 1 ICCV, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
 		</p>
            
           <ol class="">
@@ -87,6 +87,8 @@
 		  	<li>Lin Zhao, Haixing Dai, Zihao Wu, Zhenxiang Xiao, Lu Zhang, David Weizhong Liu, Xintao Hu, Xi Jiang, <b>Sheng Li</b>, Dajiang Zhu, and Tianming Liu. Coupling visual semantics of artificial neural networks and human brain function via synchronized activations. <em>IEEE Transactions on Cognitive and Developmental Systems (<b>T-CDS</b>)</em>, 2023.</li>
 		  	<li>Shengyu Chen, Nasrin Kalanat, Yiqun Xie, <b>Sheng Li</b>, Jacob Zwart, Jeffrey Sadler, Alison Appling, Samantha Oliver, Jordan Read, and Xiaowei Jia. Physics-Guided Machine Learning from Simulated Data with Different Physical Parameters. <em>Knowledge and Information Systems (<strong>KAIS</strong>)</em>, 2023.</li>
 		  	<li>Juliet N. Sekandi, Weili Shi, Ronghang Zhu, Patrick Evans Kaggwa, Ernest Mwebaze, and <b>Sheng Li</b>. Application of Artificial Intelligence to Monitoring of Medication Adherence for Tuberculosis Treatment in Africa: A Pilot Study. <em>Journal of Medical Internet Research (JMIR) AI</em>, 2023.</li> 
+		  	<li>Xiaojun Wei, Tadas Penkauskas, Joseph E Reiner, Celeste Kennard, Mark J Uline, Qian Wang, <b>Sheng Li</b>, Aleksei Aksimentiev, Joseph WF Robertson, and Chang Liu. Engineering Biological Nanopore Approaches toward Protein Sequencing. <em>ACS Nano</em>, 2023.</li> 
+		  	<li>Lian Zhang, Jason M Holmes, Zhengliang Liu, Sujay A Vora, Terence T Sio, Carlos E Vargas, Nathan Y Yu, Sameer R Keole, Steven E Schild, Martin Bues, Sheng Li, Tianming Liu, Jiajian Shen, William W Wong, and Wei Liu. Beam mask and sliding window-facilitated deep learning-based accurate and efficient dose prediction for pencil beam scanning proton therapy. <em>Medical Physics</em>, 2023.</li>
 		  	<li>Dongliang Guo, Zhixuan Chu, and <b>Sheng Li</b>. Fair Attribute Completion on Graph with Missing Attributes. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
 		  	<li>Daiqing Qi, Handong Zhao, and <b>Sheng Li</b>. Better Generative Replay for Continual Federated Learning. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
 		  	<li>Ronghang Zhu, Xiang Yu, and <b>Sheng Li</b>. Progressive Mix-Up for Few-Shot Supervised Multi-Source Domain Transfer. <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.</li>
@@ -97,6 +99,7 @@
 		  	<li>Saed Rezayi, Handong Zhao, Ronghang Zhu, and <b>Sheng Li</b>. XDC: Adaptive Cross Domain Short Text Clustering. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2023.</li>
 		 	<li>Zhixuan Chu, Mechelle Claridy, Jose Cordero, <b>Sheng Li</b>, and Stephen Rathbun. Estimating Propensity Scores with Deep Adaptive Variable Selection. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>)</em>, 2023.</li>
 		  	<li><b>Sheng Li</b>. Towards Trustworthy Representation Learning. <em>SIAM International Conference on Data Mining (<strong>SDM</strong>) - Blue Sky Idea Track</em>, 2023.</li>
+		  	<li>Weili Shi, Xueying Yang, Xujiang Zhao, Zhiqiang Tao, and <b>Sheng Li</b>. Calibrate Graph Neural Networks under Out-of-Distribution Nodes via Deep Q-learning. <em>The 32nd ACM International Conference on Information and Knowledge Management (<strong>ACM CIKM</strong>)</em>, 2023.</li>
 		  	<li>Zhixuan Chu and <b>Sheng Li</b>. Continual Causal Inference: Challenges and Opportunities. <i>The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI) Bridge Program - Continual Causality</i>, 2023.</li>
 		  	<li>Zhanwen Chen, Saed Rezayi, <b>Sheng Li</b>. More Knowledge, Less Bias: Unbiasing Scene Graph Generation with Explicit Ontological Adjustment. <i>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>)</i>, 2023.</li>
 		  	<li>Hemadri Jayalath, Ghadeer Yassin, Lakshmish Ramaswamy, and <b>Sheng Li</b>. Continual Optimization of In-Production Machine Learning Systems through Semantic Analysis of User Feedback. <i>The 15th International Conference on Agents and Artificial Intelligence (<b>ICAART</b>)</i>, 2023.</li>
@@ -120,7 +123,7 @@
 		  	<li>Weili Shi and <b>Sheng Li</b>. Improving Robustness of Vision Transformers via Data-Augmented Virtual Adversarial Training. <em>IEEE International Conference on Big Data (<strong>IEEE BigData</strong>)</em>, 2022.</li>
 		  	<li>Zhongliang Zhou, Nathaniel Hitt, Benjamin Letcher, Weili Shi, and <b>Sheng Li</b>. Pigmentation-based Visual Learning for Salvelinus fontinalis Individual Re-identification. <em>IEEE International Conference on Big Data (<strong>IEEE BigData</strong>)</em>, 2022.</li> 
 		  	<li>Saed Rezayi, Haixing Dai, Zhengliang Liu, Zihao Wu, Akarsh Hebbar, Andrew H. Burns, Lin Zhao, Dajiang Zhu, Xiang Li, Quanzheng Li, Wei Liu, <b>Sheng Li</b>, Tianming Liu. ClinicalRadioBERT: Knowledge-Infused Few Shot Learning for Clinical Notes Named Entity Recognition. <em>International Workshop on Machine Learning in Medical Imaging (in conjunction with MICCAI)</em>, 2022.</li>
-		  <p></p>
+		  	<p></p>
 		   
 			<b>2021</b>
 			<li>Rahil Taujale*, Zhongliang Zhou*, Wayland Yeung, Kelley Moremen, <b>Sheng Li</b>, and Natarajan Kannan. Mapping the glycosyltransferase fold landscape using interpretable deep learning. <em><strong>Nature Communications</strong></em>, 2021. (* indicates equal contribution)</li>
