--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	      <img class="img-fluid d-block my-5" src="Pics/UVA-SDS-V-Logo.png"> </div>
       <div class="text-center col-lg-6">
 	      	<h2 contenteditable="false" class="my-4">Sheng Li</h2>
-		<p class="lead w-100 my-3">Assistant Professor, <a href="http://datascience.virginia.edu" target="_blank">School of Data Science</a></p>
+		<p class="lead w-100 my-3">Associate Professor, <a href="http://datascience.virginia.edu" target="_blank">School of Data Science</a></p>
 		<p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
 		<br>Email: shengli [AT] virginia.edu</p>
 	</div>
@@ -91,9 +91,8 @@
       <div class="row">
         <div class="col-md-12">
           <p class="">
-            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Assistant Professor of <a href="http://datascience.virginia.edu" target="_blank">Data Science</a> at 
-		  the University of Virginia (UVA). 
-		  Prior to joining UVA, he was an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, 
+            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Associate Professor of <a href="http://datascience.virginia.edu" target="_blank">Data Science</a> at 
+		  the University of Virginia (UVA). He was an Assistant Professor of Data Science at UVA from 2022 to 2023, an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, 
 		  and a Data Scientist at Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from 
 		  Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. 
 		  He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications 
@@ -125,6 +124,7 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>08/2023, Received an <strong>NSF Grant</strong> to support our research on physics-guided graph neural networks. </li> 
 		  	<li>08/2023, One paper on the calibration of graph neural networks is accepted at ACM CIKM 2023. </li> 
 		  	<li>07/2023, One paper is accepted by Medical Physics; One paper is accepted by ACS Nano. </li> 
 		  	<li>06/2023, I am promoted to Associate Professor with Tenure (effective 08/2023). Many thanks to my students, collaborators, colleagues, and mentors!</li>
