--- a/teaching.html
+++ b/teaching.html
@@ -44,17 +44,33 @@
     </div>
   </nav>
   <div class="py-5">
+	<div class="row">
+        <div class="col-md-12">
+          <p class="lead">
+            <b>Courses at UVA</b>
+          </p>
+        </div>
+      </div>
 	<div class="container">
   	  <div class="row">
           <div class="col-md-12">
             <li>Fall 2023, DS 6200 Computation I: Fundamentals </li>
+	</div>
           </div>
       </div>
 	<div class="container">
   	  <div class="row">
           <div class="col-md-12">
             <li>Spring 2023, DS 6050: Deep Learning</li>
+	</div>
           </div>
+      </div>
+	<div class="row">
+        <div class="col-md-12">
+          <p class="lead">
+            <b>Courses at UGA</b>
+          </p>
+        </div>
       </div>
     <div class="container">
   	  <div class="row">
