--- a/activities.html
+++ b/activities.html
@@ -103,10 +103,12 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="">
-			<li><a href="http://cobweb.cs.uga.edu/~shengli/Tusion2020.html" target="_blank" class="text-secondary">Tusion (in conjunction with IJCAI)</a>, 2020</li>  
-			<li><a href="http://cobweb.cs.uga.edu/~shengli/Tusion2019.html" target="_blank" class="text-secondary">Tusion (in conjunction with IJCAI)</a>, 2019</li>
-            <li>
-              <a href="https://web.northeastern.edu/smilelab/amfg2019/" target="_blank" class="text-secondary">IEEE AMFG (in conjunction with CVPR)</a>, 2019</li>
+		  <li><a href="https://web.northeastern.edu/smilelab/amfg2023/" target="_blank" class="text-secondary">IEEE AMFG Workshop (in conjunction with ICCV)</a>, 2023</li>
+		  <li><a href="https://ai4webads2023.github.io/" target="_blank" class="text-secondary">AI4WebAds Workshop (in conjunction with AAAI)</a>, 2023</li>
+		  <li><a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank" class="text-secondary">IEEE AMFG Workshop (in conjunction with CVPR)</a>, 2021</li>
+			<li><a href="http://cobweb.cs.uga.edu/~shengli/Tusion2020.html" target="_blank" class="text-secondary">Tusion Workshop (in conjunction with IJCAI)</a>, 2020</li>  
+			<li><a href="http://cobweb.cs.uga.edu/~shengli/Tusion2019.html" target="_blank" class="text-secondary">Tusion Workshop (in conjunction with IJCAI)</a>, 2019</li>
+            <li><a href="https://web.northeastern.edu/smilelab/amfg2019/" target="_blank" class="text-secondary">IEEE AMFG Workshop (in conjunction with CVPR)</a>, 2019</li>
           </ul>
         </div>
       </div>
@@ -139,9 +141,10 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="">
-			<li>NeurIPS 2022</li>  
-			<li>ICLR 2022</li>
-			<li><a href="https://ijcai20.org/" target="_blank" class="text-secondary">IJCAI 2020-2021</a></li>
+			<li>NeurIPS 2022-2023</li>  
+		  	<li>ICML 2023</li>
+			<li>ICLR 2022-2024</li>
+			<li><a href="https://ijcai20.org/" target="_blank" class="text-secondary">IJCAI 2020-2023</a></li>
             <li>
               <a href="https://aaai.org/Conferences/AAAI-19/" target="_blank" class="text-secondary">AAAI 2019-2022</a>
             </li>
@@ -161,6 +164,7 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="">
+		  	<li>2023: ICCV, CVPR, EMNLP</li>
 			<li>2022: ICML, CVPR, ECCV, KDD</li> 
 			<li>2021: ICML, CVPR, ICLR, ACL</li>  
 			<li>2020: NeurIPS, ICML, CVPR, ECCV, KDD, ICLR, EMNLP, UAI, PAKDD, ECAI, IEEE BigData, AAAI-AISI, AAAI-AFFCON</li>  
