--- a/group.html
+++ b/group.html
@@ -62,6 +62,7 @@
 		<li><b>Zhanwen Chen</b>, Fall 2021 - </li> 
 		<li><b>Dongliang Guo</b>, Fall 2021 - </li>
 		<li><b>Mengxuan Hu</b>, Fall 2022 - </li>
+		<li><b>Guangya Wan</b>, Fall 2023 - </li>
           </ul>
         </div>
       </div>
@@ -86,7 +87,7 @@
             <b>Undergraduate Students</b>
           </p>
           <ul class="">
-			<li><b>Andrew Hays Burns</b>, Summer 2021 - Spring 2022</li>
+			
           </ul>
         </div>
       </div>
@@ -112,7 +113,7 @@
 			<li><b>Mitchell Buff</b>, Fall 2021 - Spring 2022</li>
 			<li><b>Junwen Fan</b>, Fall 2021 - Spring 2022</li>
 			<li><b>Akarsh Vasudeva Hebbar</b>, MS in CS, Summer 2021 - Fall 2021.</li>
-		    <li><b>Kranthimithra Rayapraju</b>, MS in CS, Spring 2021 - Summer 2021.</li>
+		   	 <li><b>Kranthimithra Rayapraju</b>, MS in CS, Spring 2021 - Summer 2021.</li>
 			<li><b>Matthew P. Pooser</b>, MS in CS, Fall 2020 - Spring 2021. First employment: Centers for Disease Control and Prevention.</li>
 			<li><b>Weifeng Wang</b> MS in CS (and PhD Student in Statistics), Fall 2019 - Spring 2021.</li>
 			<li><b>Weili Shi</b>, MS Student in CS, Spring 2020 - Spring 2021. Current: PhD Student at UGA.</li>
@@ -124,7 +125,9 @@
 			<li><b>Heng Shiou Sheu</b>, MS in CS, Fall 2019 - Spring 2020. Current employment: Turing Text.</li>   
 			<li><b>Kang Yuan</b>, MS in AI, Fall 2018 - Spring 2019.</li>
 			<li><b>Xiaodong Jiang</b>, MS in CS (and PhD in Statistics), Fall 2018 - Spring 2019. First employment: Facebook.</li>
-			
+			<p></p>
+		  	<b>Undergraduate Students</b>
+		  	<li><b>Andrew Hays Burns</b>, Summer 2021 - Spring 2022</li>
 			<p></p>
 			<b>Visiting Students</b>
 			<li><b>Daiqing Qi</b>, Visiting Undergraduate Student, Southeast university, Fall 2019.</li>
