--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="">
+		<li>Georgia CTSA Team Science Award, 2023</li>
 		<li>Fred C. Davidson Early Career Scholar Award, 2022</li>  
 		<li>Best Associate Editor Award, IEEE TCSVT, 2022</li>
 		<li>CS Faculty Teaching Excellence Award, 2021</li>  
@@ -212,7 +213,7 @@
 	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
-              <b>Area Chair</b>: ICML (2023), IJCAI (2023), NeurIPS (2022-2023), ICLR (2022-2023), ICPR (2020-2022), VCIP (2017)</li>
+              <b>Area Chair</b>: ICML (2023), IJCAI (2023), NeurIPS (2022-2023), ICLR (2022-2024), ICPR (2020-2022), VCIP (2017)</li>
             <li>
               <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2022), SDM (2023)</li>
             </ul>
