--- a/teaching.html
+++ b/teaching.html
@@ -44,13 +44,15 @@
     </div>
   </nav>
   <div class="p-0">
-	<div class="row">
+    <div class="container">
+      <div class="row">
         <div class="col-md-12">
           <p class="lead">
-            <b>Courses at UVA</b>
+            <b>Conference Tutorials</b>
           </p>
         </div>
       </div>
+	</div>
 	<div class="container">
   	  <div class="row">
           <div class="col-md-12">
@@ -65,12 +67,14 @@
 	</div>
           </div>
       </div>
+	<div class="container">
 	<div class="row">
         <div class="col-md-12">
           <p class="lead">
             <b>Courses at UGA</b>
           </p>
         </div>
+	</div>
       </div>
     <div class="container">
   	  <div class="row">
