--- a/teaching.html
+++ b/teaching.html
@@ -48,7 +48,7 @@
       <div class="row">
         <div class="col-md-12">
           <p class="lead">
-            <b>Conference Tutorials</b>
+            <b>Courses at UVA</b>
           </p>
       </div>
 	</div>
