--- a/group.html
+++ b/group.html
@@ -73,10 +73,8 @@
             <b>Current MS Students</b>
           </p>
           <ul class="">
-			
-			<li><b>Duna Zhan</b> (PhD Student in Statistics), Fall 2021 - </li>
-			<li><b>Yangjiaxin Wei</b> (PhD Student in Geography), Spring 2022 - </li>
-			<li><b>Zhaiming Shen</b> (PhD Student in Mathematics), Spring 2022 - </li>
+			<li><b>Huibo Yang</b> (MS Student in CS), Fall 2023 - </li>
+		  	<li><b>Tongxuan Tian</b> (MS Student in CS), Fall 2023 - </li>
           </ul>
         </div>
       </div>
@@ -109,6 +107,9 @@
 		  	<li><b>Yu Wang</b> (Statistics, Co-advised with Dr. Pengsheng Ji), Spring 2021 - Spring 2023. First employment: LinkedIn.</li>
 		  	<p></p>
 			<b>MS Students</b>
+		  	<li><b>Zhaiming Shen</b> (PhD Student in Mathematics), Spring 2022 - Summer 2023</li>
+		  	<li><b>Yangjiaxin Wei</b> (PhD Student in Geography), Spring 2022 - Summer 2023</li>
+		  	<li><b>Duna Zhan</b> (PhD Student in Statistics), Fall 2021 - Summer 2023</li>
 		  	<li><b>Kushajveer Singh</b>, Spring 2021 - Summer 2022</li>
 			<li><b>Mitchell Buff</b>, Fall 2021 - Spring 2022</li>
 			<li><b>Junwen Fan</b>, Fall 2021 - Spring 2022</li>
