--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,7 @@
            
           <ol class="">
 			<b>2023</b>
+		  	<li>Ronghang Zhu, Xiang Yu, and <b>Sheng Li</b>. Semi-Supervised Single Domain Generalization with Label-Free Adversarial Data Augmentation. <i>Transactions on Machine Learning Research (<b>TMLR</b>)</i>, 2023.</li>
 		  	<li>Zhongliang Zhou*, Wayland Yeung*, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <em>Bioinformatics</em>, 2023. (* indicates equal contribution)</li>
 		  	<li>Lin Zhao, Haixing Dai, Zihao Wu, Zhenxiang Xiao, Lu Zhang, David Weizhong Liu, Xintao Hu, Xi Jiang, <b>Sheng Li</b>, Dajiang Zhu, and Tianming Liu. Coupling visual semantics of artificial neural networks and human brain function via synchronized activations. <em>IEEE Transactions on Cognitive and Developmental Systems (<b>T-CDS</b>)</em>, 2023.</li>
 		  	<li>Shengyu Chen, Nasrin Kalanat, Yiqun Xie, <b>Sheng Li</b>, Jacob Zwart, Jeffrey Sadler, Alison Appling, Samantha Oliver, Jordan Read, and Xiaowei Jia. Physics-Guided Machine Learning from Simulated Data with Different Physical Parameters. <em>Knowledge and Information Systems (<strong>KAIS</strong>)</em>, 2023.</li>
