--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>10/2023, One paper on semi-supervised single domain generalization is accepted by TMLR.</li>
 		  	<li>09/2023, One paper on fish identification is accepted at AJCAI 2023. More information about our project can be found in this <a href="https://datascience.virginia.edu/news/fish-ial-recognition-software-aims-protect-trout" target="_blank">news article</a>.</li> 
 		  	<li>08/2023, Received an <strong>NSF Grant</strong> to support our research on physics-guided graph neural networks. </li> 
 		  	<li>08/2023, One paper on the calibration of graph neural networks is accepted at ACM CIKM 2023. </li> 
