--- a/news.html
+++ b/news.html
@@ -56,7 +56,18 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 w-100">
-          <ul class="">
+          <ul class="" style="font-size:15px">
+		  	<li>05/2022, One paper on class-imbalanced domain adaptation is accepted at <a href="https://kdd.org/kdd2022/" target="_blank">KDD 2022</a>.</li>    
+			<li>05/2022, My PhD student Zhongliang Zhou received the Outstanding Graduate Student Award from CS department.</li>  
+			<li>04/2022, One paper on knowledge-infused agricultural language models is accepted at <a href="https://ijcai-22.org/" target="_blank">IJCAI 2022</a> (AI for Good Track).</li>  
+			<li>03/2022, I accepted the invitation to serve as Area Chair for NeurIPS 2022.</li>   
+			<li>03/2022, Received a <strong>Home Depot Gift Grant</strong> (PI) to support our research on deep learning and knowledge graph.</li>  
+			<li>03/2022, Received a <strong>DoD Grant</strong> (PI) through KRI to support our research on visual intelligence.</li>  
+			<li>03/2022, One paper on multi-task adversarial learning and causal inference is accepted at <a href="https://www.chilconference.org/" target="_blank">CHIL 2022</a>.</li>   
+			<li>03/2022, Received an <strong>USGS Grant</strong> (Sole PI) to support our research on individual fish identification.</li>  
+			<li>02/2022, I accepted the invitation to serve as Associate Editor for IEEE Transactions on Neural Networks and Learning Systems (T-NNLS).</li>  
+			<li>02/2022, I received the Best Associate Editor Award from IEEE Transactions on Circuits and Systems for Video Technology.</li>  
+			<li>01/2022, One paper on open-set single domain generalization is accepted at <a href="https://iclr.cc/" target="_blank">ICLR 2022</a>.</li> 
 			<li>12/2021, I receive the <a href="https://research.uga.edu/iga/awards/#1485956970033-d7774ff4-63ff" target="_blank">Fred C. Davidson Early Career Scholar Award</a>.</li>   
 			<li>12/2021, Three papers on causal inference, unsupervised domain adaptation, and multi-modal learning are accepted at <a href="https://www.siam.org/conferences/cm/conference/sdm22" target="_blank">SDM 2022</a>.</li> 
 			<li>10/2021, Three paper are accepted to IEEE T-NNLS, <a href="https://bigdataieee.org/BigData2021/" target="_blank">IEEE BigData 2021</a>, and <a href="https://aaai.org/Conferences/AAAI-22/" target="_blank">AAAI 2022</a> (Student Poster).</li>  
