--- a/activities.html
+++ b/activities.html
@@ -54,7 +54,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
             <li>
               <b>Sheng Li</b>, Liuyi Yao, Yaliang Li, Jing Gao and Aidong Zhang: "
               <a href="http://cobweb.cs.uga.edu/~shengli/AAAI20-Causal-Tutorial.html" target="_blank" class="text-secondary">Representation Learning for Causal Inference</a>”, The AAAI Conference on Artificial Intelligence (<b><i>AAAI</i></b>), 2020.</li>
@@ -71,7 +71,7 @@
           <p class="lead">
             <b>Panelist</b>
           </p>
-          <ul class="">
+          <ul class="" style="font-size:15px">
 			<li>National Science Foundation (NSF)</li>
 			<li>Centers for Disease Control and Prevention (CDC)</li>
           </ul>
@@ -82,7 +82,7 @@
           <p class="lead">
             <b>Associate Editor /&nbsp;Editorial Board </b>
           </p>
-          <ul class="">
+          <ul class="" style="font-size:15px">
 			<li>IEEE Transactions on Neural Networks and Learning Systems (2022 - )</li>  
 			<li>IEEE Transactions on Circuits and Systems for Video Technology (2021 - )</li>
 			<li>IEEE Computational Intelligence Magazine (2019 - )</li>
@@ -102,7 +102,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
 		  <li><a href="https://web.northeastern.edu/smilelab/amfg2023/" target="_blank" class="text-secondary">IEEE AMFG Workshop (in conjunction with ICCV)</a>, 2023</li>
 		  <li><a href="https://ai4webads2023.github.io/" target="_blank" class="text-secondary">AI4WebAds Workshop (in conjunction with AAAI)</a>, 2023</li>
 		  <li><a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank" class="text-secondary">IEEE AMFG Workshop (in conjunction with CVPR)</a>, 2021</li>
@@ -121,7 +121,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
             <li>
               <a href="https://web.northeastern.edu/smilelab/AMFG2017/index.html" target="_blank" class="text-secondary">IEEE AMFG</a>, 2015-2017</li>
             <li>
@@ -140,7 +140,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
 			<li>NeurIPS 2022-2023</li>  
 		  	<li>ICML 2023</li>
 			<li>ICLR 2022-2024</li>
@@ -163,7 +163,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
 		  	<li>2023: ICCV, CVPR, EMNLP</li>
 			<li>2022: ICML, CVPR, ECCV, KDD</li> 
 			<li>2021: ICML, CVPR, ICLR, ACL</li>  
@@ -184,7 +184,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
             <li>IEEE TPAMI / TKDE / TIP / TNNLS / TMM / TBD / TC / TCSVT / TETCI / Access</li>
             <li>ACM CSUR / TKDD / TOMM / TOSN / TIST</li>
             <li>JMLR, Pattern Recognition, Neurocomputing, PLoS ONE, IJPRAI, JVCI, JEI, OE, NCAA, etc.</li>
@@ -200,7 +200,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
             <li>Senior Member, IEEE</li>
             <li>Member, ACM</li>
             <li>Member, AAAI</li>
@@ -217,7 +217,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
 			<li>Knowledge-Guided Graph Representation Learning. Dept. of Statistics, University of Georgia, Athens, GA. Dec. 2020.</li>  
 			<li>Machine Learning Meets Causal Inference. Keynote Talk, NCAA 2020. Jul. 2020.</li>  
 			<li>Machine Learning Meets Causal Inference. IEEE Atlanta Section. Jul. 2020.</li> 
