--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
           <p class="">
             <b>Book</b>
           </p>
-          <ul class="">
+          <ul class="" style="font-size:15px">
             <li>
               <b>Sheng Li</b>, Yun Fu:
               <a href="https://www.springer.com/us/book/9783319601755" target="_blank" class="text-secondary">Robust Representations for Data Analytics</a>.
@@ -63,7 +63,7 @@
           <p class="">
             <b>Book Chapters</b>
           </p>
-          <ol class="">
+          <ol class="" style="font-size:15px">
             <li>Kang Li,
               <b>Sheng Li</b>, and Yun Fu, Time Series Modeling for Activity Prediction,
               <i>Human Activity Recognition and Prediction</i>, Springer, 2016.</li>
@@ -81,7 +81,7 @@
         <i>(<b>4 ICLR, 2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 9 CIKM, 8 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 2 CVPR, 1 ICCV, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
 		</p>
            
-          <ol class="">
+          <ol class="" style="font-size:15px">
 			<b>2023</b>
 		  	<li>Ronghang Zhu, Xiang Yu, and <b>Sheng Li</b>. Semi-Supervised Single Domain Generalization with Label-Free Adversarial Data Augmentation. <i>Transactions on Machine Learning Research (<b>TMLR</b>)</i>, 2023.</li>
 		  	<li>Zhongliang Zhou*, Wayland Yeung*, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <em>Bioinformatics</em>, 2023. (* indicates equal contribution)</li>
