--- a/publications.html
+++ b/publications.html
@@ -74,9 +74,9 @@
               <b>Sheng Li</b>, Ming Shao, and Yun Fu, Low-Rank Outlier Detection,
               <i>Low-Rank and Sparse Modeling for Visual Analysis</i>, Springer, 2014.</li>
           </ol>
-          <p class="">
+          <p class="" style="font-size:15px">
             <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 4 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
-		<p class="">	
+		<p class="" style="font-size:15px">	
         <b>Conference Papers</b>
         <i>(<b>4 ICLR, 2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 9 CIKM, 8 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 2 CVPR, 1 ICCV, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
 		</p>
